# obsidian-project-sync

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  USAGE_GUIDE.md  pyproject.toml
obsidian_project_sync/: __init__.py  cli.py  config.py  conflict_resolver.py  init_project.py  sync_manager.py
tests/: __init__.py  test_config.py
